aVeneParser.java
// Generated from aVene.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class aVeneParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__50=1, T__49=2, T__48=3, T__47=4, T__46=5, T__45=6, T__44=7, T__43=8, 
		T__42=9, T__41=10, T__40=11, T__39=12, T__38=13, T__37=14, T__36=15, T__35=16, 
		T__34=17, T__33=18, T__32=19, T__31=20, T__30=21, T__29=22, T__28=23, 
		T__27=24, T__26=25, T__25=26, T__24=27, T__23=28, T__22=29, T__21=30, 
		T__20=31, T__19=32, T__18=33, T__17=34, T__16=35, T__15=36, T__14=37, 
		T__13=38, T__12=39, T__11=40, T__10=41, T__9=42, T__8=43, T__7=44, T__6=45, 
		T__5=46, T__4=47, T__3=48, T__2=49, T__1=50, T__0=51, MuutujaNimi=52, 
		Boolean=53, Arvuliteraal=54, Soneliteraal=55, Kommentaar=56, Whitespace=57;
	public static final String[] tokenNames = {
		"<INVALID>", "'Покаместъ'", "'['", "'*'", "'<'", "'!='", "'<='", "'СБОРИЩЕ'", 
		"'ПОКАМЕСТЪ'", "'сборище'", "'доколе'", "'}'", "'%'", "')'", "'='", "'[|'", 
		"'Иначе'", "'аргумент'", "'ПЕРЕЧЕНЬ'", "'СКОПИЩЕ'", "'Сборище'", "'тогда'", 
		"'перечень'", "']'", "'-='", "','", "'-'", "'('", "'Аргумент'", "'ИНАЧЕ'", 
		"'ДОКОЛЕ'", "'ЕЖЕЛИ'", "'АРГУМЕНТ'", "'|]'", "'{'", "'+='", "'покаместъ'", 
		"'+'", "'иначе'", "'Скопище'", "'Перечень'", "'Доколе'", "';'", "'>'", 
		"'Тогда'", "'скопище'", "'=='", "'ежели'", "'/'", "'>='", "'ТОГДА'", "'Ежели'", 
		"MuutujaNimi", "Boolean", "Arvuliteraal", "Soneliteraal", "Kommentaar", 
		"Whitespace"
	};
	public static final int
		RULE_programm = 0, RULE_lauseteJada = 1, RULE_lause = 2, RULE_ifLause = 3, 
		RULE_whileLause = 4, RULE_forLause = 5, RULE_array = 6, RULE_list = 7, 
		RULE_mixTypeArray = 8, RULE_omistamine = 9, RULE_muutujaDeklaratsioon = 10, 
		RULE_avaldis = 11, RULE_avaldis6 = 12, RULE_avaldis5 = 13, RULE_avaldis4 = 14, 
		RULE_avaldis3 = 15, RULE_avaldis2 = 16, RULE_avaldis1 = 17, RULE_avaldis0 = 18;
	public static final String[] ruleNames = {
		"programm", "lauseteJada", "lause", "ifLause", "whileLause", "forLause", 
		"array", "list", "mixTypeArray", "omistamine", "muutujaDeklaratsioon", 
		"avaldis", "avaldis6", "avaldis5", "avaldis4", "avaldis3", "avaldis2", 
		"avaldis1", "avaldis0"
	};

	@Override
	public String getGrammarFileName() { return "aVene.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public aVeneParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgrammContext extends ParserRuleContext {
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public ProgrammContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterProgramm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitProgramm(this);
		}
	}

	public final ProgrammContext programm() throws RecognitionException {
		ProgrammContext _localctx = new ProgrammContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38); lauseteJada();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LauseteJadaContext extends ParserRuleContext {
		public LauseContext lause(int i) {
			return getRuleContext(LauseContext.class,i);
		}
		public List<LauseContext> lause() {
			return getRuleContexts(LauseContext.class);
		}
		public LauseteJadaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lauseteJada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterLauseteJada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitLauseteJada(this);
		}
	}

	public final LauseteJadaContext lauseteJada() throws RecognitionException {
		LauseteJadaContext _localctx = new LauseteJadaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_lauseteJada);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40); lause();
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==42) {
				{
				{
				setState(41); match(42);
				setState(42); lause();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LauseContext extends ParserRuleContext {
		public MuutujaDeklaratsioonContext muutujaDeklaratsioon() {
			return getRuleContext(MuutujaDeklaratsioonContext.class,0);
		}
		public MixTypeArrayContext mixTypeArray() {
			return getRuleContext(MixTypeArrayContext.class,0);
		}
		public WhileLauseContext whileLause() {
			return getRuleContext(WhileLauseContext.class,0);
		}
		public ForLauseContext forLause() {
			return getRuleContext(ForLauseContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public OmistamineContext omistamine() {
			return getRuleContext(OmistamineContext.class,0);
		}
		public IfLauseContext ifLause() {
			return getRuleContext(IfLauseContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public LauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterLause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitLause(this);
		}
	}

	public final LauseContext lause() throws RecognitionException {
		LauseContext _localctx = new LauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_lause);
		try {
			setState(57);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48); ifLause();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49); whileLause();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(50); forLause();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(51); omistamine();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(52); muutujaDeklaratsioon();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(53); avaldis();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(54); array();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(55); list();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(56); mixTypeArray();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfLauseContext extends ParserRuleContext {
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public LauseteJadaContext lauseteJada(int i) {
			return getRuleContext(LauseteJadaContext.class,i);
		}
		public List<LauseteJadaContext> lauseteJada() {
			return getRuleContexts(LauseteJadaContext.class);
		}
		public IfLauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifLause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterIfLause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitIfLause(this);
		}
	}

	public final IfLauseContext ifLause() throws RecognitionException {
		IfLauseContext _localctx = new IfLauseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifLause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 31) | (1L << 47) | (1L << 51))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(60); match(27);
			setState(61); avaldis();
			setState(62); match(13);
			setState(63);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 21) | (1L << 44) | (1L << 50))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(64); match(34);
			setState(65); lauseteJada();
			setState(66); match(11);
			setState(67);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 16) | (1L << 29) | (1L << 38))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(68); match(34);
			setState(69); lauseteJada();
			setState(70); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileLauseContext extends ParserRuleContext {
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public WhileLauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterWhileLause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitWhileLause(this);
		}
	}

	public final WhileLauseContext whileLause() throws RecognitionException {
		WhileLauseContext _localctx = new WhileLauseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whileLause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 10) | (1L << 30) | (1L << 41))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(73); match(27);
			setState(74); avaldis();
			setState(75); match(13);
			setState(76); match(34);
			setState(77); lauseteJada();
			setState(78); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForLauseContext extends ParserRuleContext {
		public MuutujaDeklaratsioonContext muutujaDeklaratsioon() {
			return getRuleContext(MuutujaDeklaratsioonContext.class,0);
		}
		public List<AvaldisContext> avaldis() {
			return getRuleContexts(AvaldisContext.class);
		}
		public LauseteJadaContext lauseteJada() {
			return getRuleContext(LauseteJadaContext.class,0);
		}
		public AvaldisContext avaldis(int i) {
			return getRuleContext(AvaldisContext.class,i);
		}
		public ForLauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterForLause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitForLause(this);
		}
	}

	public final ForLauseContext forLause() throws RecognitionException {
		ForLauseContext _localctx = new ForLauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_forLause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 8) | (1L << 36))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(81); match(27);
			setState(82); muutujaDeklaratsioon();
			setState(83); match(42);
			setState(84); avaldis();
			setState(85); match(42);
			setState(86); avaldis();
			setState(87); match(13);
			setState(88); match(34);
			setState(89); lauseteJada();
			setState(90); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public List<TerminalNode> MuutujaNimi() { return getTokens(aVeneParser.MuutujaNimi); }
		public TerminalNode Soneliteraal(int i) {
			return getToken(aVeneParser.Soneliteraal, i);
		}
		public TerminalNode Arvuliteraal(int i) {
			return getToken(aVeneParser.Arvuliteraal, i);
		}
		public TerminalNode MuutujaNimi(int i) {
			return getToken(aVeneParser.MuutujaNimi, i);
		}
		public List<TerminalNode> Arvuliteraal() { return getTokens(aVeneParser.Arvuliteraal); }
		public List<TerminalNode> Soneliteraal() { return getTokens(aVeneParser.Soneliteraal); }
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << 9) | (1L << 20))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(93); match(MuutujaNimi);
			setState(123);
			_la = _input.LA(1);
			if (_la==14) {
				{
				setState(94); match(14);
				setState(95); match(2);
				setState(120);
				switch (_input.LA(1)) {
				case Soneliteraal:
					{
					{
					setState(96); match(Soneliteraal);
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(97); match(25);
						setState(98); match(Soneliteraal);
						}
						}
						setState(103);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case Arvuliteraal:
					{
					{
					setState(104); match(Arvuliteraal);
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(105); match(25);
						setState(106); match(Arvuliteraal);
						}
						}
						setState(111);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case MuutujaNimi:
					{
					{
					setState(112); match(MuutujaNimi);
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(113); match(25);
						setState(114); match(MuutujaNimi);
						}
						}
						setState(119);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case 23:
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(122); match(23);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public List<TerminalNode> MuutujaNimi() { return getTokens(aVeneParser.MuutujaNimi); }
		public TerminalNode Soneliteraal(int i) {
			return getToken(aVeneParser.Soneliteraal, i);
		}
		public TerminalNode Arvuliteraal(int i) {
			return getToken(aVeneParser.Arvuliteraal, i);
		}
		public TerminalNode MuutujaNimi(int i) {
			return getToken(aVeneParser.MuutujaNimi, i);
		}
		public List<TerminalNode> Arvuliteraal() { return getTokens(aVeneParser.Arvuliteraal); }
		public List<TerminalNode> Soneliteraal() { return getTokens(aVeneParser.Soneliteraal); }
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitList(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 18) | (1L << 22) | (1L << 40))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(126); match(MuutujaNimi);
			setState(156);
			_la = _input.LA(1);
			if (_la==14) {
				{
				setState(127); match(14);
				setState(128); match(15);
				setState(153);
				switch (_input.LA(1)) {
				case Soneliteraal:
					{
					{
					setState(129); match(Soneliteraal);
					setState(134);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(130); match(25);
						setState(131); match(Soneliteraal);
						}
						}
						setState(136);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case Arvuliteraal:
					{
					{
					setState(137); match(Arvuliteraal);
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(138); match(25);
						setState(139); match(Arvuliteraal);
						}
						}
						setState(144);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case MuutujaNimi:
					{
					{
					setState(145); match(MuutujaNimi);
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(146); match(25);
						setState(147); match(MuutujaNimi);
						}
						}
						setState(152);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case 33:
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(155); match(33);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MixTypeArrayContext extends ParserRuleContext {
		public List<TerminalNode> MuutujaNimi() { return getTokens(aVeneParser.MuutujaNimi); }
		public TerminalNode Soneliteraal(int i) {
			return getToken(aVeneParser.Soneliteraal, i);
		}
		public TerminalNode Arvuliteraal(int i) {
			return getToken(aVeneParser.Arvuliteraal, i);
		}
		public TerminalNode MuutujaNimi(int i) {
			return getToken(aVeneParser.MuutujaNimi, i);
		}
		public List<TerminalNode> Arvuliteraal() { return getTokens(aVeneParser.Arvuliteraal); }
		public List<TerminalNode> Soneliteraal() { return getTokens(aVeneParser.Soneliteraal); }
		public MixTypeArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixTypeArray; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterMixTypeArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitMixTypeArray(this);
		}
	}

	public final MixTypeArrayContext mixTypeArray() throws RecognitionException {
		MixTypeArrayContext _localctx = new MixTypeArrayContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mixTypeArray);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 19) | (1L << 39) | (1L << 45))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(159); match(MuutujaNimi);
			setState(177);
			_la = _input.LA(1);
			if (_la==14) {
				{
				setState(160); match(14);
				setState(161); match(2);
				setState(163);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MuutujaNimi) | (1L << Arvuliteraal) | (1L << Soneliteraal))) != 0)) {
					{
					setState(162);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MuutujaNimi) | (1L << Arvuliteraal) | (1L << Soneliteraal))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
				}

				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==25) {
					{
					setState(171);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						setState(165); match(25);
						setState(166); match(Soneliteraal);
						}
						break;

					case 2:
						{
						setState(167); match(25);
						setState(168); match(Arvuliteraal);
						}
						break;

					case 3:
						{
						setState(169); match(25);
						setState(170); match(MuutujaNimi);
						}
						break;
					}
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(176); match(23);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OmistamineContext extends ParserRuleContext {
		public List<TerminalNode> MuutujaNimi() { return getTokens(aVeneParser.MuutujaNimi); }
		public TerminalNode Soneliteraal(int i) {
			return getToken(aVeneParser.Soneliteraal, i);
		}
		public AvaldisContext avaldis() {
			return getRuleContext(AvaldisContext.class,0);
		}
		public TerminalNode Arvuliteraal(int i) {
			return getToken(aVeneParser.Arvuliteraal, i);
		}
		public TerminalNode MuutujaNimi(int i) {
			return getToken(aVeneParser.MuutujaNimi, i);
		}
		public List<TerminalNode> Arvuliteraal() { return getTokens(aVeneParser.Arvuliteraal); }
		public List<TerminalNode> Soneliteraal() { return getTokens(aVeneParser.Soneliteraal); }
		public OmistamineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_omistamine; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).enterOmistamine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof aVeneListener ) ((aVeneListener)listener).exitOmistamine(this);
		}
	}

	public final OmistamineContext omistamine() throws RecognitionException {
		OmistamineContext _localctx = new OmistamineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_omistamine);
		int _la;
		try {
			setState(260);
			switch ( getInterpreter().adaptivePredict(_input,27,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179); match(MuutujaNimi);
				setState(180); match(14);
				setState(181); avaldis();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(182); match(MuutujaNimi);
				setState(183); match(14);
				setState(184); match(2);
				setState(209);
				switch (_input.LA(1)) {
				case Soneliteraal:
					{
					{
					setState(185); match(Soneliteraal);
					setState(190);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(186); match(25);
						setState(187); match(Soneliteraal);
						}
						}
						setState(192);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case Arvuliteraal:
					{
					{
					setState(193); match(Arvuliteraal);
					setState(198);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(194); match(25);
						setState(195); match(Arvuliteraal);
						}
						}
						setState(200);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case MuutujaNimi:
					{
					{
					setState(201); match(MuutujaNimi);
					setState(206);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==25) {
						{
						{
						setState(202); match(25);
						setState(203); match(MuutujaNimi);
						}
						}
						setState(208);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					}
					break;
				case 23:
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(211); match(23);
				}
				break;
